Update station list in index.html

--- a/index.html
+++ b/index.html
@@ -152,20 +152,21 @@
 
 <script>
     const STATIONS_DB = [
-        { name: "Zerbst/Anhalt", file: "zerbst.json" },
-        { name: "Rodleben", file: "rodleben.json" },
-        { name: "Roßlau (Elbe)", file: "rosslau.json" },
-        { name: "Gommern", file: "gommern.json" },
+        { name: "Bad Belzig", file: "bad_belzig.json" },
+        { name: "Biederitz", file: "biederitz.json" },
         { name: "Dessau Hbf", file: "dessau_hbf.json" },
         { name: "Dessau Süd", file: "dessau_sued.json" },
-        { name: "Biederitz", file: "biederitz.json" },
+        { name: "Gommern", file: "gommern.json" },
+        { name: "Leipzig Hbf ", file: "leipzig_hbf.json" },
+        { name: "Magdeburg Herrenkrug", file: "magdeburg_herrenkrug.json" },
         { name: "Magdeburg Hbf", file: "magdeburg_hbf.json" },
         { name: "Magdeburg Neustadt", file: "magdeburg_neustadt.json" },
-        { name: "Magdeburg Herrenkrug", file: "magdeburg_herrenkrug.json" },
-        { name: "Leipzig Hbf ", file: "leipzig_hbf.json" },
         { name: "Pretzier(Altm)", file: "pretzier_altm.json" },
-        { name: "Bad Belzig", file: "bad_belzig.json" }
-    ];
+        { name: "Rodleben", file: "rodleben.json" },
+        { name: "Roßlau (Elbe)", file: "rosslau.json" },
+        { name: "Wusterwitz", file: "wusterwitz.json" },
+        { name: "Zerbst/Anhalt", file: "zerbst.json" }
+         ];
 
     const BASE_URL = 'https://raw.githubusercontent.com/nicopro2021/Abfahrtstafel-/main/';
     let currentStation = null;
