--- a/index.html
+++ b/index.html
@@ -17,52 +17,45 @@
         }
 
         html, body { 
-            height: 100%; margin: 0; padding: 0; overflow: hidden; 
+            height: 100%; margin: 0; padding: 0; 
             background: #000; font-family: -apple-system, Roboto, sans-serif; color: var(--text-main);
+            overflow: hidden; /* Verhindert das Scrollen der gesamten Seite */
         }
 
-        /* --- STYLES FÜR DEN MONITOR --- */
-        #board { flex-grow: 1; overflow-y: auto; }
+        /* --- FAVORITEN SLOTS --- */
+        .fav-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; margin-top: 20px; width: 100%; }
+        .fav-card { 
+            background: #111; border: 1px solid #222; padding: 12px 5px; 
+            border-radius: 12px; font-size: 0.75rem; text-align: center; cursor: pointer;
+        }
+        .fav-card.active { border-color: var(--platform-yellow); background: #1a1500; color: #fff; }
+
+        /* --- MONITOR LAYOUT --- */
+        .monitor { display: none; flex-direction: column; height: 100vh; width: 100%; }
+        .monitor.active { display: flex; }
+
+        #board { 
+            flex-grow: 1; 
+            overflow-y: auto; /* WICHTIG: Macht die Stationsliste scrollbar */
+            -webkit-overflow-scrolling: touch;
+            padding-bottom: 20px;
+        }
 
         .row { 
-            display: grid; 
-            grid-template-columns: 55px 1fr 35px 85px; 
-            padding: 12px 10px; 
-            border-bottom: 1px solid #181818;
-            align-items: center;
-            position: relative;
+            display: grid; grid-template-columns: 55px 1fr 35px 85px; 
+            padding: 12px 10px; border-bottom: 1px solid #181818; align-items: center;
         }
 
-        /* Ausfall-Stil */
-        .row.cancelled { 
-            background: rgba(226, 0, 26, 0.15); /* Rötlicher Hintergrund für Ausfälle */
-        }
-        .row.cancelled .line { background: #444; color: #888; }
-        .row.cancelled .destination { color: var(--db-red); font-weight: bold; }
+        .row.cancelled { background: rgba(226, 0, 26, 0.15); }
 
         .line { background: #fff; color: #000; padding: 3px 0; border-radius: 4px; font-weight: 900; text-align: center; font-size: 0.8rem; }
         .destination-container { display: flex; flex-direction: column; overflow: hidden; padding: 0 8px; }
         .destination { font-size: 1.05rem; font-weight: 500; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
         
-        /* --- LAUFTEXT (MARQUEE) STYLES --- */
-        .reason-container {
-            font-size: 0.75rem;
-            color: var(--delay-red);
-            overflow: hidden;
-            white-space: nowrap;
-            margin-top: 2px;
-        }
-
-        .marquee {
-            display: inline-block;
-            padding-left: 100%;
-            animation: marquee 15s linear infinite;
-        }
-
-        @keyframes marquee {
-            0% { transform: translate(0, 0); }
-            100% { transform: translate(-100%, 0); }
-        }
+        /* --- LAUFTEXT --- */
+        .reason-container { font-size: 0.75rem; color: var(--delay-red); overflow: hidden; white-space: nowrap; margin-top: 2px; }
+        .marquee { display: inline-block; padding-left: 100%; animation: marquee 15s linear infinite; }
+        @keyframes marquee { 0% { transform: translate(0, 0); } 100% { transform: translate(-100%, 0); } }
 
         .platform { text-align: center; font-weight: bold; color: var(--platform-yellow); font-size: 1.1rem; }
         .time-box { text-align: right; line-height: 1.1; }
@@ -70,30 +63,20 @@
         .actual { font-weight: bold; font-size: 1.15rem; color: var(--ontime-green); }
         .actual.delayed { color: var(--delay-red); }
         .actual.cancelled-text { color: var(--db-red); text-decoration: line-through; }
+        .cancelled-badge { background: var(--db-red); color: white; padding: 1px 4px; border-radius: 3px; font-size: 0.6rem; font-weight: bold; text-transform: uppercase; margin-bottom: 2px; width: fit-content; }
 
-        /* Badge für Ausfall */
-        .cancelled-badge { 
-            background: var(--db-red); color: white; padding: 1px 4px; 
-            border-radius: 3px; font-size: 0.6rem; font-weight: bold; 
-            text-transform: uppercase; margin-bottom: 2px; width: fit-content;
-        }
-
-        /* --- RESTLICHE UI ELEMENTE --- */
+        /* --- UI --- */
         #welcome-screen { position: fixed; inset: 0; background: #000; z-index: 3000; display: flex; flex-direction: column; align-items: center; justify-content: center; }
         #welcome-screen.hidden { display: none; }
-        .monitor { display: none; flex-direction: column; height: 100vh; }
-        .monitor.active { display: flex; }
-        .header { padding: 15px; border-bottom: 3px solid var(--db-blue); }
+        .header { padding: 15px; border-bottom: 3px solid var(--db-blue); background: #000; }
         .station-name { font-size: 1.25rem; font-weight: bold; }
         #current-time { color: var(--ontime-green); font-family: monospace; }
-        .search-trigger { background: var(--card-bg); padding: 18px; border-radius: 15px; cursor: pointer; margin-bottom: 30px; }
-        .fav-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; }
-        .fav-card { background: #111; padding: 12px 5px; border-radius: 12px; font-size: 0.75rem; text-align: center; }
+        .search-trigger { background: var(--card-bg); padding: 18px; border-radius: 15px; cursor: pointer; text-align: center; width: 80%; }
         #search-overlay { position: fixed; inset: 0; background: #000; z-index: 4000; display: none; flex-direction: column; }
         .search-header { padding: 15px; display: flex; gap: 10px; border-bottom: 1px solid #222; }
         .search-input { flex-grow: 1; background: #1a1a1a; border: 1px solid #333; color: white; padding: 12px; border-radius: 12px; }
         .result-item { padding: 18px; border-bottom: 1px solid #111; }
-        .back-btn { background: none; border: none; color: white; font-size: 24px; }
+        .back-btn { background: none; border: none; color: white; font-size: 24px; cursor: pointer; }
         .fav-toggle { margin-left: auto; background: none; border: none; font-size: 1.5rem; color: #333; }
         .fav-toggle.is-fav { color: var(--platform-yellow); }
     </style>
@@ -101,8 +84,8 @@
 <body>
 
 <div id="welcome-screen">
-    <div style="text-align:center; width: 85%;">
-        <h1>Guten Tag</h1>
+    <div style="text-align:center; width: 85%; display: flex; flex-direction: column; align-items: center;">
+        <h1 style="margin-bottom: 20px;">Guten Tag</h1>
         <div class="search-trigger" onclick="openSearch()">🔍 Station suchen...</div>
         <div class="fav-grid" id="fav-bar"></div>
     </div>
@@ -113,12 +96,13 @@
         <button class="back-btn" onclick="closeSearch()">✕</button>
         <input type="text" class="search-input" id="station-query" placeholder="Suchen..." oninput="filterStations()">
     </div>
-    <div id="search-results"></div>
+    <div id="search-results" style="overflow-y: auto;"></div>
 </div>
 
 <div class="monitor" id="monitor-app">
-    <div style="display:flex; align-items:center; padding: 10px;">
+    <div style="display:flex; align-items:center; padding: 10px; background: #111;">
         <button class="back-btn" onclick="goHome()">←</button>
+        <div style="color: var(--db-red); font-weight: bold; font-size: 0.8rem; margin-left: 10px">DB LIVE</div>
         <button id="star-icon" class="fav-toggle" onclick="toggleFavorite()">★</button>
     </div>
     <div class="header">
@@ -145,20 +129,55 @@
 
     function openSearch() { document.getElementById('search-overlay').style.display = 'flex'; filterStations(); }
     function closeSearch() { document.getElementById('search-overlay').style.display = 'none'; }
-    function goHome() { document.getElementById('welcome-screen').classList.remove('hidden'); document.getElementById('monitor-app').classList.remove('active'); }
+    
+    function goHome() { 
+        document.getElementById('welcome-screen').classList.remove('hidden'); 
+        document.getElementById('monitor-app').classList.remove('active'); 
+        updateFavUI(); 
+    }
 
     function selectStation(station) {
         currentStation = station;
         document.getElementById('display-station').innerText = station.name;
         document.getElementById('welcome-screen').classList.add('hidden');
         document.getElementById('monitor-app').classList.add('active');
-        closeSearch(); loadData();
+        updateStarIcon();
+        closeSearch(); 
+        loadData();
     }
 
     function filterStations() {
         const q = document.getElementById('station-query').value.toLowerCase();
         document.getElementById('search-results').innerHTML = STATIONS_DB.filter(s => s.name.toLowerCase().includes(q))
             .map(s => `<div class="result-item" onclick='selectStation(${JSON.stringify(s)})'>${s.name}</div>`).join('');
+    }
+
+    function updateFavUI() {
+        document.getElementById('fav-bar').innerHTML = favorites.map((fav, i) => `
+            <div class="fav-card ${fav ? 'active' : ''}" onclick="handleFavClick(${i})">
+                <div style="font-size: 1.2rem; margin-bottom: 4px">${fav ? '📍' : '＋'}</div>
+                <b>${fav ? fav.name.substring(0, 10) : 'Slot ' + (i+1)}</b>
+            </div>`).join('');
+    }
+
+    function handleFavClick(i) { if(favorites[i]) selectStation(favorites[i]); else openSearch(); }
+
+    function toggleFavorite() {
+        const index = favorites.findIndex(f => f && f.file === currentStation.file);
+        if (index > -1) {
+            favorites[index] = null;
+        } else {
+            const empty = favorites.indexOf(null);
+            if (empty > -1) favorites[empty] = currentStation;
+            else favorites[0] = currentStation;
+        }
+        localStorage.setItem('db_final_favs', JSON.stringify(favorites));
+        updateStarIcon();
+    }
+
+    function updateStarIcon() {
+        const isFav = favorites.some(f => f && f.file === currentStation.file);
+        document.getElementById('star-icon').className = isFav ? 'fav-toggle is-fav' : 'fav-toggle';
     }
 
     async function loadData() {
@@ -168,7 +187,6 @@
             const data = await res.json();
             const board = document.getElementById('board');
             board.innerHTML = '';
-
             data.sort((a, b) => a.zeit.localeCompare(b.zeit));
 
             data.filter(zug => {
@@ -183,19 +201,13 @@
                 const zeitAnzeige = hatEchtzeit ? zug.echte_zeit : zug.zeit;
                 const istVerspaetet = hatEchtzeit && zug.echte_zeit !== zug.zeit;
 
-                // Logik für den Grund-Lauftext
-                let grundHTML = '';
-                if (grund.length > 0) {
-                    // Wenn der Text kurz ist, normal anzeigen, sonst als Marquee
-                    const displayClass = grund.length > 40 ? 'marquee' : '';
-                    grundHTML = `<div class="reason-container"><span class="${displayClass}">${grund}</span></div>`;
-                }
+                let grundHTML = grund ? `<div class="reason-container"><span class="${grund.length > 35 ? 'marquee' : ''}">${grund}</span></div>` : '';
 
                 board.innerHTML += `
                     <div class="row ${isCancelled ? 'cancelled' : ''}">
                         <div class="line">${zug.linie}</div>
                         <div class="destination-container">
-                            ${isCancelled ? `<span class="cancelled-badge">Fahrt fällt aus</span>` : ''}
+                            ${isCancelled ? `<span class="cancelled-badge">Ausfall</span>` : ''}
                             <div class="destination">${zug.ziel}</div>
                             ${grundHTML}
                         </div>
@@ -211,6 +223,7 @@
 
     setInterval(() => { document.getElementById('current-time').innerText = new Date().toLocaleTimeString('de-DE'); }, 1000);
     setInterval(loadData, 10000);
+    updateFavUI(); // Initialer Aufruf für die Speicherslots
 </script>
 </body>
 </html>
