Fix duplicate entry for Brandenburg Hbf

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     const STATIONS_DB = [
         { name: "Bad Belzig", file: "bad_belzig.json" },
         { name: "Biederitz", file: "biederitz.json" },
-        { name: "Brandenburg Hbf", file: "brandenburg_hbf.json" }
+        { name: "Brandenburg Hbf", file: "brandenburg_hbf.json" },
         { name: "Dessau Hbf", file: "dessau_hbf.json" },
         { name: "Dessau Süd", file: "dessau_sued.json" },
         { name: "Gommern", file: "gommern.json" },
