Add Berlin Hbf station to STATIONS_DB

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
 <script>
     const STATIONS_DB = [
         { name: "Bad Belzig", file: "bad_belzig.json" },
+        { name: "Berlin Hbf", file: "berlin_hbf.json" },
         { name: "Biederitz", file: "biederitz.json" },
         { name: "Brandenburg Hbf", file: "brandenburg_hbf.json" },
         { name: "Dessau Hbf", file: "dessau_hbf.json" },
