--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
         { name: "Magdeburg Herrenkrug", file: "magdeburg_herrenkrug.json" },
         { name: "Magdeburg Hbf", file: "magdeburg_hbf.json" },
         { name: "Magdeburg Neustadt", file: "magdeburg_neustadt.json" },
+        { name: "Opernhaus, Magdeburg", file "opernhaus_magdeburg.json"},
         { name: "Pretzier (Altm)", file: "pretzier_altm.json" },
         { name: "Rodleben", file: "rodleben.json" },
         { name: "Roßlau (Elbe)", file: "rosslau.json" },
